# anarchy

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  index.html
c/src/core/: cohort.c  cohort.h  select.c  select.h  unit.h
c/src/family/: family.c  family.h
c/src/heads/: test.c
c/src/tests/: cohort_tests.cf  do_cohort_tests.cf  do_family_tests.cf  do_select_tests.cf  do_unit_tests.cf  family_tests.cf  select_tests.cf  unit_tests.cf
js/: .jshintrc  Firework copy 2.html  Firework copy.html  Firework.html  Makefile  anarchy_test.html  cardDeck.html  encapsulated_exmaple.html  examples.css  examples.html  examples.mkd  examples_head.html  fireworks.html  galaxies.html  random_path.html  serve.sh
js/js/: anarchy.js  anarchy.mjs  anarchy_tests.js
proto/: sum_formulae.py
python/: .gitignore  Makefile  README.md  anarchy.py  doc.css  doc.html  doc.md  doc.mkd  doc.py  period.py  setup.cfg  test_anarchy.py  viz.py
python/anarchy/: __init__.py  _version.py  cohort.py  rng.py  test.py  viz.py
python/anarchy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/docs/anarchy/: cohort.html  index.html  rng.html  test.html
src/: cohort.h  test.c  unit.h
src/core/: cohort.c  cohort.h  select.c  select.h  unit.h
src/family/: family.c  family.h
src/heads/: rng.c  test.c
src/tests/: cohort_tests.cf  do_cohort_tests.cf  do_family_tests.cf  do_select_tests.cf  do_unit_tests.cf  family_tests.cf  select_tests.cf  unit_tests.cf
unity/anarchy/: Assembly-CSharp.csproj  anarchy.sln
unity/anarchy/Assets/: Anarchy.cs  Blue.asset  Orange.asset  TilePlacer.cs  (+2 more)
(+17 files in other folders)
