[metadata]
name = anarchy
author = Peter Mawhorter
author_email = pmawhorter@gmail.com
version = attr: anarchy.__version__
description = Managed chaos for procedural content generation, including incremental/reversible pseudo-random numbers and shuffling/distribution.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://cs.wellesley.edu/~pmwh/anarchy/anarchy/python/doc.html
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Topic :: Games/Entertainment
    Topic :: Multimedia
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English

[options]
provides = anarchy
packages = anarchy

[options.extras_require]
test = pytest
